--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,8 @@ frameworkVersion: "3"
 provider:
   name: aws
   runtime: nodejs18.x
+  stage: ${opt:stage, 'dev'}
+  region: ${opt:region, 'us-east-1'}
 
 plugins:
   - serverless-plugin-typescript
