--- a/serverless.yml
+++ b/serverless.yml
@@ -11,5 +11,10 @@ plugins:
   - serverless-plugin-typescript
 
 functions:
-  hello:
-    handler: handler.hello
+  register:
+    handler: functions/auth.register
+    events:
+    - http:
+        path: register
+        method: post
+        cors: true
